applications/jenkins-cn-north4-2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* injectedEnvVars/$ {
       return 403;
      }
      location ^~ /script {
       return 403;
      }
      location ^~ /manage/script {
       return 403;
      }
  name: jenkins-cn-north4-2-ingress
  namespace: jenkins
spec:
  tls:
    - hosts:
        - openeulerjenkins.osinfra.cn
      secretName: jenkins-cn-north4-tls
  rules:
    - host:  openeulerjenkins.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: jenkins-cn-north4-2-ingress-rule-02
  namespace: jenkins
spec:
  rules:
  - host: openeulerjenkins.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /job/(.*)/console
  tls:
  - hosts:
    - openeulerjenkins.osinfra.cn
    secretName: jenkins-cn-north4-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: jenkins-cn-north4-2-ingress-rule-03
  namespace: jenkins
spec:
  rules:
  - host: openeulerjenkins.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /job/(.*)/consoleFull
  tls:
  - hosts:
    - openeulerjenkins.osinfra.cn
    secretName: jenkins-cn-north4-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: jenkins-cn-north4-2-ingress-rule-04
  namespace: jenkins
spec:
  rules:
  - host: openeulerjenkins.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /job/(.*)/api/json
  tls:
  - hosts:
    - openeulerjenkins.osinfra.cn
    secretName: jenkins-cn-north4-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: jenkins-cn-north4-2-ingress-rule-05
  namespace: jenkins
spec:
  rules:
  - host: openeulerjenkins.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /job/function-item/job/release-manager/
  tls:
  - hosts:
    - openeulerjenkins.osinfra.cn
    secretName: jenkins-cn-north4-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: jenkins-cn-north4-2-ingress-rule-06
  namespace: jenkins
spec:
  rules:
  - host: openeulerjenkins.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /job/(.*)/buildWithParameters
  tls:
  - hosts:
    - openeulerjenkins.osinfra.cn
    secretName: jenkins-cn-north4-tls
  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: jenkins-cn-north4-2-ingress-rule-07
  namespace: jenkins
spec:
  rules:
  - host: openeulerjenkins.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /queue/(.*)/api/json
  tls:
  - hosts:
    - openeulerjenkins.osinfra.cn
    secretName: jenkins-cn-north4-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: jenkins-cn-north4-2-ingress-rule-08
  namespace: jenkins
spec:
  rules:
  - host: openeulerjenkins.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /job/multiarch/job/openeuler/(.*)/(config.xml|createItem)
  tls:
  - hosts:
    - openeulerjenkins.osinfra.cn
    secretName: jenkins-cn-north4-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: jenkins-cn-north4-2-ingress-rule-09
  namespace: jenkins
spec:
  rules:
  - host: openeulerjenkins.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /job/[a-z0-9A-z-/]+/artifact/[a-z0-9A-z-/]+\.log
  tls:
  - hosts:
    - openeulerjenkins.osinfra.cn
    secretName: jenkins-cn-north4-tls
